# protoc-gen-ts-filename-repro

./: BUILD.bazel  README.md  other.message.proto
